force-app/main/default/objects/AgentToDo_Task__c/AgentToDo_Task__c.object-meta.xml
<CustomObject>
    <description
  >AgentToDo 일정(할 일) 항목. 사용자가 직접 등록하거나 AgentToDo Assistant가 생성/변경하며, 캘린더·오늘의 일정·받은 작업 화면의 단일 데이터 원본으로 사용됩니다.</description>
    <label>일정</label>
    <pluralLabel>일정</pluralLabel>
    <nameField>
        <label>Todo 번호</label>
        <type>AutoNumber</type>
        <displayFormat>TODO-{0000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>