force-app/main/default/objects/AgentToDo_Task__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description
  >일정 유형. 캘린더 칩 색상을 결정합니다. Meeting은 보라색, 그 외는 청록색으로 표시됩니다.</description>
    <label>카테고리</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Work</fullName>
                <default>true</default>
                <label>Work</label>
            </value>
            <value>
                <fullName>Meeting</fullName>
            </value>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>