force-app/main/default/objects/AgentToDo_Task__c/fields/Completed_At__c.field-meta.xml
<CustomField>
    <fullName>Completed_At__c</fullName>
    <description
  >완료 처리된 시각. 이번 주 완료율 계산에 사용됩니다.</description>
    <label>완료 일시</label>
    <type>DateTime</type>
</CustomField>