force-app/main/default/objects/AgentToDo_Task__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>일정 상세 설명. 상세 드로어에 표시됩니다.</description>
    <label>상세 설명</label>
    <type>LongTextArea</type>
    <length>4000</length>
</CustomField>