force-app/main/default/objects/AgentToDo_Task__c/fields/Due_At__c.field-meta.xml
<CustomField>
    <fullName>Due_At__c</fullName>
    <description
  >일정 마감 일시. 날짜와 시간을 하나의 필드로 관리하여 시간순 정렬과 기한 초과 판정을 단순화합니다.</description>
    <label>마감 일시</label>
    <type>DateTime</type>
    <required>true</required>
</CustomField>