force-app/main/default/objects/AgentToDo_Task__c/fields/Last_Agent_Action__c.field-meta.xml
<CustomField>
    <fullName>Last_Agent_Action__c</fullName>
    <description
  >이 레코드에 마지막으로 실행된 Agent Action 이름. 상세 드로어의 "실행된 Agent Action" 항목에 표시됩니다.</description>
    <label>최근 Agent Action</label>
    <inlineHelpText>예: CreateTodo, CompleteTodo</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>