force-app/main/default/objects/AgentToDo_Task__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description
  >일정 진행 상태. Done 이외의 상태에서 마감 일시가 지나면 기한 초과로 판정됩니다.</description>
    <label>상태</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ready</fullName>
                <default>true</default>
                <label>대기</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
                <label>진행 중</label>
            </value>
            <value>
                <fullName>Done</fullName>
                <label>완료</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>