force-app/main/default/objects/AgentToDo_Task__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description
  >일정 제목. 캘린더 셀과 오늘의 일정 목록에 표시되는 텍스트입니다.</description>
    <label>제목</label>
    <inlineHelpText>예: 고객 제안서 최종 검토</inlineHelpText>
    <type>Text</type>
    <length>120</length>
    <required>true</required>
</CustomField>